# nlsp_ue

./: .gitignore  2_c.txt  ass1.md  pyproject.toml
notebooks/assignments/: 1-1-system-identification.ipynb  1-2-harmonic-analysis.ipynb  1-4-flows.ipynb  1-5-keyword-recognition.ipynb  2-2-chaos-continuous.ipynb  7-1-logistic-map.ipynb
notebooks/sessions/: 3-2-normalizing-flows.ipynb  4-1-system-identification.ipynb  6-1-dynamical-systems.ipynb
src/models/: keyword_cnn.py  mls_models.py
src/utils/: array_to_md.py
