[tool.poetry]
name = "nlsp_ue"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "nlsp_ue" }]

readme = "README.md"
[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "3.5.3"
numpy = "1.23.4"
pandas = "1.5.1"
scipy = "1.9.3"
stingray = "1.1.1"
torchaudio = "0.13.0"
torchvision = "0.14.0"
scikit-learn = "1.1.3"
jupyter = "1.0.0"
pillow = "9.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
